@@ -1,6 +1,8 @@
 CHANGES
 =======
 
+* Add default file shaddock.yml
+* Abandon less API calls as no change in result
 * Reduce api calls
 * refacto
 * Global refactoring
